<resources>
    <string name="app_name">StockTable</string>
    <string name="login_title">Welcome Back!</string>
    <string name="login_subtitle">Login to continue</string>
    <string name="login_signIn">SIGN IN</string>
    <string name="login_create">Create New Account</string>
    <string name="reg_title">Registration</string>
    <string name="reg_register">REGISTER</string>
    <string name="input_name">Name</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="menu_market">Market</string>
    <string name="menu_own">Own</string>
    <string name="menu_explore">Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>